# intelligent_antibodies

./: .gitignore  Dockerfile  README.md  app.py  fetched.txt  main.py  model.py  package-lock.json  package.json  pyproject.toml  requirements.txt  unfeteched.txt
app/: main.py
data/SAbDab/: All_PDB_files.txt  positive_samples.txt  sequences.csv  unfetched.txt
data/SAbDab/fasta/all_samples/: 1a2y.fasta  (+861 more)
notebooks/: filtering.ipynb  intelligent-ab-network.ipynb  one-hot-encoding.ipynb  siamese-network.ipynb  test.ipynb  vae-generate-sequence.ipynb  vae-generate.ipynb  variable-autoencoder-nlf.ipynb  variable-autoencoder-onehot.ipynb  variable-autoencoder-tensorflow.ipynb  variable-autoencoder.ipynb
notebooks/modules/: _version.py  dataset.py  encoding.py  kmer-encoding.py
notebooks/modules/data/: loader.py
notebooks/modules/layers/: SamplingLayer.py  VariationalLossLayer.py  __init__.py
notebooks/modules/model/: Siamese.py  VAE.py
notebooks/modules/models/: SiameseInteractionClassifier.py  VAE.py  VAEFull.py  VAEProtein.py
scripts/: download_pdbs.py  get_interaction_table.py  get_seq_table.py  sandbox.py  scrap_data.py
scripts/models_scripts/: generation_modelpy  siamese_model.py  vae_model.py
test/: test.ipynb
test/.ipynb_checkpoints/: sequences-checkpoint.csv
web_interface/: README.md  app.py  main.py  requirements.txt
web_interface/fake_data/: data.csv  test.fa
web_interface/intelligent-antibodies-view/: README.md  index.html  package-lock.json  package.json  vite.config.js
web_interface/intelligent-antibodies-view/src/: App.vue  main.js
(+14 files in other folders)
